Designed the 'Product Description' page.
Why?
When a product is click, we need a page where all the details of the
specific product is displayed. From this page, shop cusotomers can decide
to buy the product, add it to their wishlist and see other related
products.

How?
Create a Products controller,
Create the 'show product' view,
Create the route that points to this page
Create the scss stiesheet file for this view
Create a js file that initializes some scripts is this page.

Completed 'Design Product Description Page':
https://www.pivotaltracker.com/story/show/108000136
finished [#108000136]

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,12 @@
 @import "materialize";
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
-@import "landing"
+@import "font-awesome-sprockets";
+@import "font-awesome";
+
+$my-grey: #b2beb5;
+$my-green: #338574;
+$my-white: #ffffff;
+$my-black: #000;
+
+@import "landing";
+@import "products";
