--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -32,7 +32,7 @@
 		<nav class="white valign-wrapper">
 			<div class="container-trim">
 				<div class="left">
-					<a class="brand-logo black-text" href="#">
+					<a class="brand-logo black-text" href="<%= root_path %>">
 					<div class="left">
 						<span>Shopify</span>
 					</div>
