--- a/app/views/landing/_header.html.erb
+++ b/app/views/landing/_header.html.erb
@@ -3,7 +3,7 @@
 		<div class="top-bar valign-wrapper">
 			<div class="container-trim">
 				<div class="left">
-					<span class="white-text small-text">FAST & FREE SHIPPING ON ALL ORDERS - CALL US : 08020000000</span>
+					<span class="white-text small-text">FAST &amp; FREE SHIPPING ON ALL ORDERS - CALL US : 08020000000</span>
 				</div>
 				<div class="right">
 					<%= link_to "About us", "#", class: 'white-text small-text' %>
@@ -22,7 +22,7 @@
 		
 			</div>
 		</div>
-		<ul class="dropdown-content" id="cat_dropdown">
+		<ul class="dropdown-content" id="cat-dropdown">
 			<li>Fashion</li>
 			<li>Electronics</li>
 			<li>Home and Kitchen</li>
@@ -40,7 +40,7 @@
 				</div>
 				<div class="right">
 					<div class="hide-on-med-and-down">
-						<a href="#" class="black-text dropdown-button" data-activates="cat_dropdown">CATEGORIES</a>
+						<a href="#" class="black-text dropdown-button" data-activates="cat-dropdown">CATEGORIES</a>
 						<span class="white-text small-text">&nbsp;|&nbsp;</span>
 						<a href="#" class="black-text">CART</a>
 						<span class="white-text small-text">&nbsp;|&nbsp;</span>
