--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -14,7 +14,7 @@
 	
 </div>
 <div class= "pre-footer valign-wrapper">
-	<div class="container">
+	<div class="container-full">
 		<div class="section">
 	<div class="row">
 		<div class="col l4 center">
