Fixed violations raised by houndCI. Why? Having pushed and made a pull request, houndCI raised violations which have now been fixed.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import "materialize";
-@import "https://fonts.googleapis.com/icon?family=Material+Icons";
-@import "landing"
+@import "font-awesome-sprockets";
+@import "font-awesome";
+@import "landing";
+@import "users";
