Cart Dropdown Feature Why? To provide easy access to the items in the cart, to the customer. Customers should be able to easily preview cart items, at any point in time.
How?
Added partials, and effected changes in the heading partial to support feature.
[Finished #108336520]

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,5 +27,5 @@ $pinterest-red: #c92228;
 @import "landing";
 @import "users";
 @import "products";
-@import "landing";
 @import "checkout";
+@import "cart_dropdown";
