--- a/app/views/checkout/index.html.erb
+++ b/app/views/checkout/index.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: 'header' %>
 <div class= "row-break"></div>
 <div class="row container-trim">
-  <div class="col s12 m12 l8 test-this">
+  <div class="col s12 m12 l8">
     <div>
     	<div class="">
     	  <div class="row">
@@ -63,7 +63,7 @@
   </div>
   </div>
 
-  <div class="col s12 m12 l4 test-this">
+  <div class="col s12 m12 l4">
     <div class="border-wrap">
       <div class ="section-title"> 
         CHOOSE PAYMENT METHOD
