--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,13 +16,13 @@
         <div class="col s10">
           <div class="slider">
             <ul class="slides">
-              <li>
+              <li class="slide-item">
                 <%= image_tag "watch1.jpg" %>
               </li>
-              <li>
+              <li class="slide-item">
                 <%= image_tag "shirt2.jpg" %>
               </li>
-              <li>
+              <li class="slide-item">
                 <%= image_tag "shirt2-back.jpg" %>
               </li>
             </ul>
@@ -35,16 +35,16 @@
           <div class="col s4">Share</div>
           <div class="col s2">
             
-            <a href="#" title="Facebook"><i class="fa fa-facebook my-icons"></i></a>
+            <a href="#" title="Facebook"><i class="fa fa-facebook my-icons product-page"></i></a>
           </div>
           <div class="col s2">
-            <a href="#" title="Twitter"><i class="fa fa-twitter my-icons"></i></a>
+            <a href="#" title="Twitter"><i class="fa fa-twitter my-icons product-page"></i></a>
           </div>
           <div class="col s2">
-            <a href="#" title="Instagram"><i class="fa fa-instagram my-icons"></i></a>
+            <a href="#" title="Instagram"><i class="fa fa-instagram my-icons product-page"></i></a>
           </div>
           <div class="col s2">
-            <a href="#" title="Pinterest"><i class="fa fa-pinterest-p my-icons"></i></a>
+            <a href="#" title="Pinterest"><i class="fa fa-pinterest-p my-icons product-page"></i></a>
           </div>
         </div>
       </div>
@@ -59,11 +59,11 @@
 
       <div class="rating-counts">
         <div class="rating left">
-          <span>&#9734;</span>
-          <span>&#9734;</span>
-          <span>&#9734;</span>
-          <span>&#9734;</span>
-          <span>&#9734;</span>
+          <span class="star-character">&#9734;</span>
+          <span class="star-character">&#9734;</span>
+          <span class="star-character">&#9734;</span>
+          <span class="star-character">&#9734;</span>
+          <span class="star-character">&#9734;</span>
         </div>
         <div class="counts left">
           <span>4 reviews</span>
@@ -74,8 +74,8 @@
         <div class="row">
           <form method="get">
             <div class="col s1 bold">Qty: </div>
-            <div class="col s2"><input type="number" value="1" class=""></div>
-            <div class="col s4"><input type="submit" class="waves-effect btn" value="BUY NOW" /></div>
+            <div class="col s2"><input type="number" value="1" class="products-input"></div>
+            <div class="col s4"><input type="submit" class="waves-effect btn products-input" value="BUY NOW" /></div>
             <div class="col s5">
               <a href="#" title="" class="wish-list-link">
                 <i class="fa fa-heart-o wishlist-icon"></i> Add to Wish List
@@ -100,10 +100,10 @@
     <div class="col m6 s12">
       <div class="row" id="description-tabs">
         <div class="col s12">
-          <ul class="tabs">
-            <li class="tab"><a href="#description-tab" class="active">Description</a></li>
-            <li class="tab"><a href="#specification-tab" class="active">Specifications</a></li>
-            <li class="tab"><a href="#review-tab">Reviews</a></li>
+          <ul class="tabs product-features">
+            <li class="tab"><a href="#description-tab" class="black-text active">Description</a></li>
+            <li class="tab"><a href="#specification-tab" class="black-text active">Specifications</a></li>
+            <li class="tab"><a href="#review-tab" class="black-text">Reviews</a></li>
           </ul>
         </div>
         <div id="description-tab" class="col s12">
