--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'landing/header' %>
+<%= render "header" %>
 <div class="row container">
 <h2>Create Account</h2>
   <div class = "container col l8">
@@ -59,4 +59,4 @@
     </div>
   </div>
 </div>
-<%= render partial: 'landing/footer' %>
+<%= render "footer" %>
