--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -10,7 +10,7 @@
 					<span class="white-text small-text">&nbsp;|&nbsp;</span>
 					<%= link_to "Blog", "#", class: 'white-text small-text' %>
 					<span class="white-text small-text">&nbsp;|&nbsp;</span>
-					<%= link_to "Contact Us", "#", class: 'white-text small-text' %>
+					<%= link_to "Contact Us", "/contact", class: 'white-text small-text' %>
 					<span class="white-text small-text">&nbsp;|&nbsp;</span>
 					<%= link_to "FAQ", "#", class: 'white-text small-text' %>
 					<span class="white-text small-text">&nbsp;|&nbsp;</span>
