Fixes Radio Buttons on Checkout Page
Why? Radio buttons were not selecting

How? Changed the label names to match radio Ids

--- a/app/views/checkout/index.html.erb
+++ b/app/views/checkout/index.html.erb
@@ -75,8 +75,8 @@
               <div ><img src="http://i.imgur.com/LYZPJLL.png?1"></div>
               <div class="section-text black-text"> 
                 Pay on delivery
-                <input name="group1" type="radio" value="group1" />
-                <label for="test1" ></label>
+                <input name="pay" type="radio" value="cash" id ="cash" />
+                <label for="cash" ></label>
               </div>
             </div>
           </a>
@@ -88,8 +88,8 @@
               <div ><img src="http://i.imgur.com/3M0DG78.png"></div>
               <div class="section-text black-text">
                 Online Payment
-                <input name="group1" type="radio" value="group1" />
-                <label for="test1" ></label>
+                <input name="pay" type="radio" value="card" id = "card" />
+                <label for="card" ></label>
               </div>
             </div>
           </a>
@@ -101,8 +101,8 @@
               <div><img src="http://i.imgur.com/bwcO7oJ.png?1"></div>
               <div class="section-text black-text">
               Bank transfer
-                <input name="group1" type="radio" value="group1" />
-                <label for="test1" ></label>
+                <input name="pay" type="radio" id= "transfer" value="transfer" />
+                <label for="transfer" ></label>
               </div>
             </div>
           </a>
