--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -48,7 +48,7 @@
 							<%= render "cart_dropdown" %>
 						</span>						
 						<span class="white-text small-text">&nbsp;|&nbsp;</span>
-						<a href="#" class="black-text">SIGN IN</a>
+						<%= link_to "SIGN IN", user_signin_path, class: "black-text" %>
 					</div>
 				</div>
 		
