Uniform Button Style

--- a/app/views/application/_cart_dropdown.html.erb
+++ b/app/views/application/_cart_dropdown.html.erb
@@ -38,7 +38,7 @@
   <div class="cart-dropdown-footer">
     <div class="row">
       <div class="col l6"><%= link_to "View Cart", "/cart", class: 'btn grey' %></div>
-      <div class="col l6"><%= link_to "Checkout", "/checkout", class: 'btn right' %></div>
+      <div class="col l6"><%= link_to "Checkout", "/checkout", class: 'btn right gen-green-background' %></div>
     </div>
   </div>
 </div>
