--- a/app/views/checkout/index.html.erb
+++ b/app/views/checkout/index.html.erb
@@ -57,7 +57,7 @@
   	  <%= render partial: "cartproduct", collection: @cartproducts%>
   	  
   	  <div class="row">
-  	  	<a href="#" class="main-button right">EMPTY CART</a>
+  	  	<a href="#" class="btn gen-green-background right">EMPTY CART</a>
   	  </div>
     </div>
   </div>
@@ -114,7 +114,7 @@
         <div class="row sub-sections"> <span class="left">shipping cost </span><span class="right">₦100.00</span></div>
         <div class="row sub-sections"> <span class="left">total amount </span><span class="right">₦21,100.00</span></div>
         <div class="row  section-button center">
-          <div><button type="submit" class="main-button"> Complete order</button></div>
+          <div><button type="submit" class="btn gen-green-background"> Complete order</button></div>
         </div>
       </div>
     </div>
