--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -97,6 +97,10 @@ nav {
   background: $dark-cyan;
   height: 2.5em;
   width: 100%;
+
+  a:hover {
+    text-decoration: underline;
+  }
 }
 
 .top-contain {
@@ -170,10 +174,6 @@ nav {
 .footer-container {
   margin: auto;
   width: 60%;
-}
-
-a:hover {
-  text-decoration: none;
 }
 
 .category-span {
