--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -7,7 +7,7 @@
       <%= render partial: "cartproduct", collection: @cartproducts%>
       
       <div class="row">
-        <a href="#" class="main-button right">EMPTY CART</a>
+        <a href="#" class="btn right gen-green-background">EMPTY CART</a>
       </div>
     </div>
   </div>
@@ -23,7 +23,7 @@
         <div class="row sub-sections"> <span class="left">shipping cost </span><span class="right">₦100.00</span></div>
         <div class="row sub-sections"> <span class="left">total amount </span><span class="right">₦21,100.00</span></div>
         <div class="row  section-button center">
-          <div><button type="submit" class="main-button"> Proceed to Checkout</button></div>
+          <div><button type="submit" class="btn gen-green-background"> Proceed to Checkout</button></div>
         </div>
       </div>
     </div>
