Implement Products description page
Why?
Make product description database-driven.

How?
Use data from faker gem to seed the database and display it on production description page.

https://www.pivotaltracker.com/story/show/110080052
[Finishes #110080052]

--- a/app/views/landing/_product.html.erb
+++ b/app/views/landing/_product.html.erb
@@ -1,5 +1,5 @@
 <div class= "col s12 m6 l3">
-	<a href="<%= product_path(1) %>">
+	<a href="<%= product_path(Product.order("RANDOM()").first) %>">
 		<div class="card home-card">
 			<div class="card-image"><%= image_tag product[:image] %></div>
 	  </div>
