--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,27 +4,16 @@
     <div class="col m6 product-view-image">
       <div class="row">
         <div class="col s2">
-          <!-- <div>
-            <%= image_tag "shirt2-small.jpg" %>
-          </div>
-          <div>
-            <%= image_tag "shirt2-back-small.jpg" %>
-          </div>
-          -->
         </div>
          
         <div class="col s10">
           <div class="slider">
             <ul class="slides">
-              <li class="slide-item">
-                <%= image_tag "watch1.jpg" %>
-              </li>
-              <li class="slide-item">
-                <%= image_tag "shirt2.jpg" %>
-              </li>
-              <li class="slide-item">
-                <%= image_tag "shirt2-back.jpg" %>
-              </li>
+              <% @product.product_image_links.each do |link| %>
+                <li class="slide-item">
+                  <%= image_tag link.link_name %>
+                </li>
+              <% end %>
             </ul>
           </div>
         </div>
@@ -52,9 +41,9 @@
     </div>
 
     <div class="col m6">
-      <h5 class="product-name">Firetrap - Men's Plain Short Sleeve Poplin Shirt</h5>
+      <h5 class="product-name"><%= @product.name %></h5>
       <div class="price">
-          NGN 7,400.00
+        &#x20A6;<%= @product.price %>
       </div>
 
       <div class="rating-counts">
@@ -67,14 +56,14 @@
         </div>
         <div class="counts left">
           <span>4 reviews</span>
-          <!-- | <span>23 likes</span> -->
+
         </div>
       </div>
       <div class="buy-now">
         <div class="row">
           <form method="get">
             <div class="col s1 bold">Qty: </div>
-            <div class="col s2"><input type="number" value="1" class="products-input"></div>
+            <div class="col s2"><input type="number" value="1" min = 1 max=<%= @product.quantity %> class="products-input"></div>
             <div class="col s4"><input type="submit" class="waves-effect btn products-input" value="BUY NOW" /></div>
             <div class="col s5">
               <a href="#" title="" class="wish-list-link">
@@ -108,25 +97,23 @@
         </div>
         <div id="description-tab" class="col s12">
           
-          <%= render "description_tab_contents" %>
+          <%= @product.description %>
 
         </div>
         <div id="specification-tab" class="col s12">
           
-          <%= render "product_features" %>
+          <%= render "specification_tab_contents" %>
 
         </div>
         <div id="review-tab" class="col s12">
 
           <%= render "reviews_tab_contents" %>
         
-
         </div>
       </div>
     </div>
   </div>
 
-  
 </div>
 
 <%= render "footer" %>
